lab1/Test/L1-A-10-76.output
Error Type A at Line 10
Error Type A at Line 16
Error Type A at Line 32
Error Type B at Line 47
Error Type A at Line 54
Error Type B at Line 57
Error Type B at Line 64
