lab1/Test/L1-A-10-76.cmm
float nhnUl3x29W5Vd3UT 
;
struct mX7F96K9z {
};
struct POFEBYh8yFYLZ T9sb4LAJs3Ur8PUh ( ) {
  int UEn9f5DjOM2EqpL7mP , TO = trV1BbF3OBx9 ;
  while ( XTq6o41eRjGsHeCVDF = LloxxmR11j6BVxc7O > 
    _j4s_K5PCw [ K || jlTyuXtwSz && fcSqM0QtmiFacWVn == 
    VpI - D6ytQXRE5tgEYL * FZUXOO8cR9NLolza ( YLqaNh != 
    huX1GfL + ! ( NT76SB_n = bTQyJXceepljwwLSor ^= wKf4fd1hRGsmjgjlCv3T 
    >= SUf ( ef , Sfq = EiwJO4B9Vzjd && uqOzfOdd0NlkJD 
    < poWJp <= ez4ogXvmJIt4NQvI ) / ! 1271547774.1737416482 
    || 537546799 ) ) * ! - xHWSKKcgoK5K011uebp . YEpk7U16i 
    ] / - ! SIDT8X5Pqn6NUbI ( ) ) {
    struct {
    }bRt_dogJDaFogaXpk [ 355862086 ] $;
  }
}
int ;
int ;
int jbR0seCv ( int CrlVU ) {
}
int pY , tXXajW5T5 

;
int T ( ) {
  LV0 ;
  if ( Pju0B )   return nNhaBAN ;

}
int ;
int ;^
int ;
int ;
int ;
int ;
int AfMDFUAf ( ) {
  if ( rJD2d5DBOu9 )   if ( U5RQmlMLcQMC0UFWF )   while 
    ( Crpku8XT )   QJPa6D13BN0B ;

else   YxxcoDHb ;

else   ekcpHB5KScIBq4SrUUYt ;

  if ( Hhdt2VjoIy8 )   uZT ;
else   while ( N2kCaB6UJyY ) {
<=   }

}
int ;
int ;
int ;
int ;
int MTMmDNCRTaqTYkGB ( int LWcg , int Y ) `{
}
int TVi10O ( ) {
,   if ( N6JZWh3SHD6UVo05IWoT )   XaIOyWIwwOrZkgcwWv 
    ;
else   if ( UKWnaT )   pqZyJqJEZ ;


}
int ;
int ;&& 
